# zsclip

./: .gitignore  AGENTS.md  Cargo.toml  PATCH_NOTES.md  README.en.md  README.md  UI_REFACTOR_NOTES.md  VERSION.txt  build.rs  verify-multisync.ps1  zsui-revision.txt
.github/workflows/: native-hosts.yml  release-packages.yml
assets/icons/: app.manifest  app.rc
docs/: ios-shortcuts-config.example.json  ios-shortcuts.md  lan-sync.md  macos-ui.md  multi-sync.md  native-host-verification.md  package-managers.md  ui-host-porting.md  wps-taskpane.md  zsui-architecture.md  zsui-platform-matrix.md  zsui.md
docs/skills/zsclip-native-ui/: SKILL.md
docs/skills/zsclip-native-ui/agents/: openai.yaml
integrations/wps-taskpane/: README.md  index.html  main.js  package.json  ribbon.xml
locales/: README.md  en.json
mobile/android/: settings.gradle  smoke-adb.ps1
mobile/android/app/: build.gradle
packaging/scoop/: zsclip-no-lan.json  zsclip.json
release/0.7.4/: README.en.md  README.md  RELEASE_NOTES.en.md  RELEASE_NOTES.md
scripts/: native-host-smoke-linux.sh  native-host-smoke-macos.sh
src/: app.rs  app_core.rs  app_tests.rs  app_version.rs  clip_list_core.rs  clip_models.rs  cloud_sync.rs  db_runtime.rs  gdiplus.rs  hover_preview.rs  i18n.rs  i18n_runtime.rs  lan_sync.rs  lan_sync_core.rs  lib.rs  linux_app.rs  linux_gtk_adapter.rs  linux_native_host.rs  macos_app.rs  macos_appkit_adapter.rs  macos_native_host.rs  mail_merge.rs  mail_merge_native.rs  main.rs  main_ui_layout.rs  multi_sync.rs  native_clipboard_capture.rs  settings.rs  settings_framework.rs  settings_layout.rs  settings_model.rs  settings_registry.rs  settings_render.rs  settings_ui_host.rs  shell.rs  sticker.rs  time_utils.rs  tray.rs  ui.rs  ui_core.rs  (+13 more)
src/app/: constants.rs  data.rs  hosts.rs  main_clipboard_capture.rs  main_cloud_sync.rs  main_edge_auto_hide.rs  main_entry.rs  main_events.rs  main_hover_preview.rs  main_input.rs  main_lan_sync.rs  main_low_level_input.rs  main_paste.rs  main_paste_target_discovery.rs  main_platform_bindings.rs  main_popup_menus.rs  main_renderer.rs  main_row_commands.rs  main_row_tools.rs  main_search.rs  main_search_host.rs  main_startup_integrations.rs  main_view_helpers.rs  main_window.rs  main_window_host.rs  main_window_refresh.rs  main_window_registry.rs  platform_helpers.rs  prelude.rs  runtime.rs  settings_about_page.rs  settings_about_page_data.rs  settings_about_page_metadata.rs  settings_about_page_update.rs  settings_actions.rs  settings_app_apply.rs  settings_app_collect.rs  settings_app_collect_cloud.rs  settings_app_collect_general.rs  settings_app_collect_group.rs  (+104 more)
src/app_core/: ai_action_protocol.rs  command_protocol.rs  component_protocol.rs  components.rs  control_protocol.rs  event_protocol.rs  framework_manifest.rs  host_protocol.rs  layout_protocol.rs  main_commands.rs  main_window.rs  main_window_protocol.rs  native_adapter_manifest.rs  native_component_protocol.rs  native_host_actions.rs  native_host_launch.rs  native_hosts.rs  product_adapter.rs  render_protocol.rs  runtime_protocol.rs  settings_protocol.rs  tests.rs  timer_protocol.rs  ui_surface_protocol.rs  zsui.rs
src/linux_app/: contract.rs  startup.rs
src/macos_app/: contract.rs  startup.rs
src/platform/: accessibility.rs  appearance.rs  autostart.rs  clipboard.rs  clipboard_listener.rs  com.rs  dialog.rs  dpi.rs  dragdrop.rs  file_dialog.rs  gdi.rs  gdiplus.rs  hook.rs  hotkey.rs  ime.rs  input.rs  library.rs  locale.rs  memory.rs  menu.rs  mod.rs  monitor.rs  paste_target.rs  process.rs  registry.rs  secret_store.rs  shell.rs  sound.rs  string.rs  system_parameters.rs  text_caret.rs  time_zone.rs  timer.rs  tray_icon.rs  ui_event.rs  ui_renderer.rs  window.rs  window_identity.rs
src/zsui/: app.rs  capability.rs  components.rs  host.rs  hotkey.rs  icon.rs  menu.rs  mod.rs  settings.rs  tray.rs  window.rs
target_codex2/: .rustc_info.json
target_codex2/debug/: zsclip.d
target_codex2/debug/data/: settings.json
(+251 files in other folders)
