[package]
name = "zsclip"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/qiu7824/zsclip/"

[dependencies]
arboard = "3.4"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_System_Ole",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Controls",
] }

rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
png = "0.17"

[build-dependencies]
embed-resource = "2"

[[bin]]
name = "zsclip"
path = "src/main.rs"
