[package]
name = "zsclip"
version = "0.9.1"
edition = "2021"
repository = "https://github.com/qiu7824/zsclip/"

[dependencies]
arboard = "3.4"
clipboard-win = "5.4"
windows-sys = { version = "0.59", features = [
  "Win32_Foundation",
  "Win32_Globalization",
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_System_DataExchange",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_LibraryLoader",
  "Win32_System_Ole",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_Common",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Controls",
] }

rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
png = "0.17"
image = { version = "0.25", default-features = false, features = ["bmp"] }
base64 = "0.22"
qrcodegen = "1.8"
md5 = "0.7"

[build-dependencies]
embed-resource = "2"

[[bin]]
name = "zsclip"
path = "src/main.rs"
